[project]
name = "urlup-be"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Matt White", email = "mail@matt-w.net" }]
dependencies = [
  "pulumi>=3.99.0",
  "pulumi-aws>=6.17.0",
  "moto>=4.2.12",
  "boto3>=1.34.11",
  "pydantic-settings>=2.1.0",
  "sqids>=0.4.1",
  "pulumi_aws_apigateway>=2.1.1",
  "structlog>=23.3.0",
  "urllib3==1.26.18",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "black>=23.12.1",
  "isort>=5.13.2",
  "ruff>=0.1.9",
  "bandit>=1.7.6",
  "pylint>=3.0.3",
  "flake8>=5.0.4",
  "pip>=23.3.2",
  "pytest>=7.4.4",
  "ipdb>=0.13.13",
  "pyright>=1.1.344",
  "freezegun>=1.4.0",
  "pyproject-flake8>=5.0.4.post1",
]

[tool.rye.scripts]
"fmt:black" = "black . --preview"
"fmt:isort" = "isort tests/ src/"
"lint:ruff" = "ruff check src"
"lint:ruff-tests" = "ruff check tests --ignore F811,F403"
"lint:flake8" = "pflake8 src/"
"lint:flake8-tests" = "pflake8 tests/ --ignore F401,F811,F403"
"lint:bandit" = "bandit -c pyproject.toml -r src/"
"lint:pylint" = "pylint src/"
"lint:pylint-tests" = "pylint tests/ --disable=W0613,W0621"
"typecheck" = "pyright"
lint = { chain = [
  "lint:ruff",
  "lint:ruff-tests",
  "lint:flake8",
  "lint:flake8-tests",
  "lint:bandit",
  "lint:pylint",
  "lint:pylint-tests",
] }
"test" = { cmd = "pytest -x", env = { ENVFILE = ".env.test" } }
quality = { chain = [
  "fmt:isort",
  "fmt:black",
  "lint:ruff",
  "lint:ruff-tests",
  "lint:flake8",
  "lint:flake8-tests",
  "typecheck",
  "test",
  "lint:pylint",
  "lint:pylint-tests",
  "lint:bandit",
] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/urlup_be"]

[tool.isort]
profile = "black"
line_length = 79


[tool.black]
line-length = 79
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.pylint.MASTER]
ignore-paths = ["^src/urlup_be/lambdas/.venv/.*$"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 79
min-similarity-lines = 7
extension-pkg-whitelist = "pydantic"
disable = """
    broad-exception-caught,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    unsubscriptable-object,
    fixme,
    wildcard-import,
    unused-wildcard-import,
    method-cache-max-size-none,
    invalid-name,
    unused-argument,
    consider-using-f-string,
    use-dict-literal
"""

[tool.pyright]
include = ["src", "tests"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/typings",
  "**/typestubs",
  "**/.venv",
]
reportUnknownMemberType = false
reportPrivateImportUsage = false
typeCheckingMode = "basic"
stubPath = "typestubs"
pythonVersion = "3.11"

[tool.ruff]
exclude = ["typestubs", ".venv"]
ignore = ["F401"]

[tool.flake8]
max-line-length = 79
ignore = ["E203", "W503"]
exclude = ["typestubs", ".venv"]

[tool.bandit]
exclude_dirs = ["src/urlup_be/lambdas/.venv"]
disable = ["B101"]
